Added 4 new gilded armor sets which are neutral to piglins

--- a/src/main/resources/assets/vibraniumtechnologies/lang/en_us.json
+++ b/src/main/resources/assets/vibraniumtechnologies/lang/en_us.json
@@ -16,6 +16,26 @@
   "item.vibraniumtechnologies.vibranium_leggings": "Vibranium Leggings",
   "item.vibraniumtechnologies.vibranium_boots": "Vibranium Boots",
 
+  "item.vibraniumtechnologies.gilded_vibranium_helmet": "Gilded Vibranium Helmet",
+  "item.vibraniumtechnologies.gilded_vibranium_chestplate": "Gilded Vibranium ChestPlate",
+  "item.vibraniumtechnologies.gilded_vibranium_leggings": "Gilded Vibranium Leggings",
+  "item.vibraniumtechnologies.gilded_vibranium_boots": "Gilded Vibranium Boots",
+
+  "item.vibraniumtechnologies.gilded_diamond_helmet": "Gilded Diamond Helmet",
+  "item.vibraniumtechnologies.gilded_diamond_chestplate": "Gilded Diamond ChestPlate",
+  "item.vibraniumtechnologies.gilded_diamond_leggings": "Gilded Diamond Leggings",
+  "item.vibraniumtechnologies.gilded_diamond_boots": "Gilded Diamond Boots",
+
+  "item.vibraniumtechnologies.gilded_netherite_helmet": "Gilded Netherite Helmet",
+  "item.vibraniumtechnologies.gilded_netherite_chestplate": "Gilded Netherite Chestplate",
+  "item.vibraniumtechnologies.gilded_netherite_leggings": "Gilded Netherite Leggings",
+  "item.vibraniumtechnologies.gilded_netherite_boots": "Gilded Netherite Boots",
+
+  "item.vibraniumtechnologies.gilded_iron_helmet": "Gilded Iron Helmet",
+  "item.vibraniumtechnologies.gilded_iron_chestplate": "Gilded Iron Chestplate",
+  "item.vibraniumtechnologies.gilded_iron_leggings": "Gilded Iron Leggings",
+  "item.vibraniumtechnologies.gilded_iron_boots": "Gilded Iron Boots",
+
   "block.vibraniumtechnologies.vibranium_block": "Vibranium Block",
   "block.vibraniumtechnologies.deepslate_vibranium_ore": "Deepslate Vibranium Ore",
   "block.vibraniumtechnologies.raw_vibranium_block": "Raw Vibranium Block",
